[package]
name = "macroquad_begin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.27.2"

macroquad = "0.4.5"
egui-macroquad = { git = 'https://github.com/gold-silver-copper/egui-macroquad.git', branch="master" }

ratatui = { version = "0.26.2", default-features = false }
ratframe = {version = "1.0.13", default-features = false}
#disable defaults features for rat frame if you do not want to import eframe



wasm-bindgen-futures = "0.4.1"
wasm-bindgen = { version = "0.2.51", features = ["serde-serialize"]  }
ehttp = { version = "0.5.0", features = ["json"] }
